Test/Client get test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,25 @@
 
-spring.mail.port=587
-spring.mail.username=xxx
-spring.mail.password=xxx
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 springdoc.swagger-ui.path=/
 stripe.api.key=xxx
 stripe.public.key=xxx
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:postgresql://localhost:5432/mkt-db
 spring.datasource.username=xxx
 spring.datasource.password=xxx
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.jpa.properties.hibernate.default_schema=MKT_PLACE
-spring.datasource.hikari.connection-init-sql=ALTER SESSION SET CURRENT_SCHEMA=MKT_PLACE
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=mkt
+#spring.datasource.hikari.connection-init-sql=ALTER SESSION SET CURRENT_SCHEMA=mkt
 
 spring.jpa.show-sql=true
 log4j.logger.org.hibernate.type=trace
 spring.jpa.properties.hibernate.format_sql=true
 
-## Security
-# Pode ser qualquer coisa aqui
 jwt.secret=xxx
 
-# Tempo de expiracao em MS dias=(86400000/1000/60/60/24) horas=(86400000/1000/60/60)...
 jwt.expiration=86400000
 jwt.expiration-visitante=7200000
 
 
-user.timezone=xxx
